<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.addedittransaction.common.AddEditTransactionParentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_with_back_btn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">


            <LinearLayout
                android:id="@+id/topLinear"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:background="?attr/colorPrimary"
                android:gravity="end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edt_money"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="70"
                    android:background="?attr/colorPrimary"
                    android:foregroundGravity="right|center"
                    android:gravity="right|center"
                    android:hint="@string/_0"
                    android:layoutDirection="ltr"
                    android:maxLines="1"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="4dp"
                    android:scrollHorizontally="true"
                    android:textColor="?attr/colorOnPrimary"
                    android:textDirection="ltr"
                    android:textSize="32sp"
                    tools:text="80+23" />


                <TextView
                    android:id="@+id/finalNUmber"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="16dp"
                    android:layout_weight="30"
                    android:gravity="right|center"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:scrollHorizontally="true"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:text="103" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/category_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:gravity="center|left"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/topLinear"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLinear"
                tools:icon="@drawable/ic_cat_food"
                tools:text="Food" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/bottomCoordinator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLinear">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/transaction_detail_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtField_date_holder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="@string/date"
                        app:boxStrokeColor="@color/edit_text_outline_color"
                        app:layout_constraintEnd_toStartOf="@+id/txtField_time_holder"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_date_sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|start"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center|start"
                            android:inputType="none"
                            android:padding="8dp"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtField_time_holder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="@string/time"
                        app:boxStrokeColor="@color/edit_text_outline_color"
                        app:layout_constraintBottom_toBottomOf="@+id/txtField_date_holder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/txtField_date_holder"
                        app:layout_constraintTop_toTopOf="@+id/txtField_date_holder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|start"
                            android:clickable="true"
                            android:focusable="true"

                            android:gravity="center|start"
                            android:inputType="none"
                            android:padding="8dp"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtField_memo"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/note"
                        app:boxStrokeColor="@color/edit_text_outline_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtField_date_holder"
                        app:layout_constraintVertical_bias="0.0">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_memo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:maxLines="4"
                            android:minLines="2" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.ssmmhh.jibam.presentation.addedittransaction.CalculatorKeyboard
                        android:id="@+id/keyboard"
                        android:layout_width="match_parent"
                        android:layout_height="252dp"
                        android:layoutDirection="ltr"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/select_category_bottom_sheet"
                    style="?attr/bottomSheetStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                    <com.google.android.material.appbar.AppBarLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/white"
                        android:clickable="true"
                        android:focusable="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"

                            android:layout_height="match_parent">

                            <com.google.android.material.tabs.TabLayout
                                android:id="@+id/category_tab_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:foregroundGravity="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tabGravity="center" />


                            <ImageButton
                                android:id="@+id/bottom_sheet_close_btn"
                                android:layout_width="48dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:background="@color/white"
                                android:clickable="true"
                                android:contentDescription="@string/close_category_list"
                                android:focusable="true"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_round_close_24"
                                app:tint="@color/black" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.appbar.AppBarLayout>

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/bottom_sheet_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_check_green_24dp" />


            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>