<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mtrl_toolbar_default_height"
    android:background="@color/purple_500">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_normal"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_round_arrow_back_24">

        <ImageButton
            android:id="@+id/topAppBar_img_btn"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/mtrl_toolbar_default_height"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_round_delete_24" />
    </com.google.android.material.appbar.MaterialToolbar>
</com.google.android.material.appbar.AppBarLayout>

