...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="details">Details</string>
    <string name="add_transaction">Add Transaction</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete_category">"Are You sure you want to delete this category?"</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_info">Info</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_delete_text">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="add_new_category">Add new category</string>
    <string name="now">Now</string>
    <string name="search">Search</string>
...
