...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/transaction_fragment_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/transaction_toolbar"
                    layout="@layout/layout_toolbar_with_month_changer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mtrl_toolbar_default_height"
                    android:gravity="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
...
